unpackaged/main/default/objects/Form_Parent__c/Form_Parent__c.object-meta.xml
<CustomObject>
    <label>Form Parent</label>
    <nameField>
        <label>Form Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>