unpackaged/main/default/objects/Form_Parent__c/fields/Content_of_form__c.field-meta.xml
<CustomField>
        <fullName>Content_of_form__c</fullName>
        <label>Content of form</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>