unpackaged/main/default/objects/Form_Parent__c/fields/External_CSS__c.field-meta.xml
<CustomField>
        <fullName>External_CSS__c</fullName>
        <label>External CSS</label>
        <type>TextArea</type>
    </CustomField>