unpackaged/main/default/objects/Form_Parent__c/fields/Is_Authenticate__c.field-meta.xml
<CustomField>
        <fullName>Is_Authenticate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Authenticate?</label>
        <type>Checkbox</type>
    </CustomField>